# microsoft-defender-for-endpoint-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml  plan.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/adr/: 0001-agent-mode-for-credential-isolation.md  0002-agent-shared-mode.md  0003-agent-env-sanitization.md  0004-keychain-backed-client-secret.md
src/: dispatch.rs  error.rs  lib.rs  main.rs  profile.rs
src/agent/: client.rs  handler.rs  mod.rs  peer_verify.rs  protocol.rs  security.rs  server.rs  session.rs
src/auth/: browser.rs  clipboard.rs  mod.rs  oauth2.rs
src/cli/: agent.rs  alerts.rs  auth.rs  credentials.rs  hunting.rs  incidents.rs  machines.rs  mod.rs
src/client/: mod.rs  response.rs  retry.rs
src/commands/: alerts.rs  auth.rs  credentials.rs  hunting.rs  incidents.rs  machines.rs  mod.rs
src/config/: credential_store.rs  mod.rs
src/models/: alert.rs  incident.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
tests/: agent_lifecycle.rs  completion.rs
