[package]
name = "defender-for-endpoint-cli"
version = "0.10.0"
edition = "2024"
description = "CLI tool for Microsoft Defender for Endpoint API"
license = "MIT"
repository = "https://github.com/hiboma/mde-cli"

[[bin]]
name = "mde-cli"
path = "src/main.rs"

[lib]
name = "mde"
path = "src/lib.rs"

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "6"
dotenvy = "0.15"
gag = "1"
libc = "0.2"
open = "5"
rand = "0.9.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full", "net", "io-util", "signal"] }
toml = "1.1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
keyring = { version = "3", default-features = false, features = ["apple-native"] }
# Same major as the version that `keyring`'s apple-native backend pulls
# in for macOS, so that downcasting the boxed error inside
# keyring::Error::PlatformFailure resolves to the same `Error` type.
security-framework = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
serial_test = "3"
tempfile = "3"
